--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
@@ -24,15 +24,13 @@
                 <menus>
                     <Menu mnemonicParsing="false" text="File">
                         <items>
-                            <MenuItem mnemonicParsing="false" text="Exit" onAction="#exit"/>
-                        </items>
-                        <items>
+                            <MenuItem mnemonicParsing="false" text="Import Configuration File"
+                                      onAction="#importConfigFile"/>
                             <MenuItem mnemonicParsing="false" text="Show Config Files In File Browser"
                                       onAction="#showConfigFileInFileBrowser"/>
-                        </items>
-                        <items>
                             <MenuItem mnemonicParsing="false" text="Show Logs In File Browser"
                                       onAction="#showLogsInFileBrowser"/>
+                            <MenuItem mnemonicParsing="false" text="Exit" onAction="#exit"/>
                         </items>
                     </Menu>
 
@@ -51,6 +49,10 @@
                                       onAction="#switchToLightMode"/>
                         </items>
 
+                    </Menu>
+                    <Menu mnemonicParsing="false" text="Help">
+                        <MenuItem mnemonicParsing="false" text="About"
+                                  onAction="#aboutDialog"/>
                     </Menu>
                     <!--                    <Menu mnemonicParsing="false" text="Help">-->
                     <!--                        <items>-->
