--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
@@ -167,7 +167,7 @@
                 </StackPane>
             </children>
         </AnchorPane>
-        <AnchorPane maxHeight="200.0" prefHeight="200.0" prefWidth="993.0">
+        <AnchorPane minHeight="50" maxHeight="200.0" prefHeight="200.0" prefWidth="993.0">
             <VirtualizedScrollPane prefHeight="200.0" prefWidth="993.0" AnchorPane.bottomAnchor="0.0"
                                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                 <content>
