changing the display type (JSON/text) based on the content type in the message view

--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
@@ -145,13 +145,18 @@
                             <ComboBox fx:id="keyContentType" prefHeight="26.0" prefWidth="120.0"/>
                             <Label prefHeight="17.0" prefWidth="72.0" text="Value Type"/>
                             <ComboBox fx:id="valueContentType" prefHeight="26.0" prefWidth="120.0"/>
-                            <Label prefHeight="17.0" prefWidth="87.0" text="Value Schema"/>
-                            <VirtualizedScrollPane>
-                                <content>
-                                    <CodeArea fx:id="schemaTextArea" disable="true" prefWidth="220.0" wrapText="true">
-                                    </CodeArea>
-                                </content>
-                            </VirtualizedScrollPane>
+                            <HBox fx:id="valueSchemaContainer">
+                                <children>
+                                    <Label prefHeight="17.0" prefWidth="87.0" text="Value Schema"/>
+                                    <VirtualizedScrollPane>
+                                        <content>
+                                            <CodeArea fx:id="schemaTextArea" prefWidth="220.0"
+                                                      wrapText="true">
+                                            </CodeArea>
+                                        </content>
+                                    </VirtualizedScrollPane>
+                                </children>
+                            </HBox>
                         </HBox>
                     </children>
                 </GridPane>
