add schema combo box in AddOrViewMessageModalController; load schemas in the background

--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/dark-style.css
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/dark-style.css
@@ -82,3 +82,8 @@
 .cg-info-label {
     -fx-font-size: 15;
 }
+/*controlsfx CustomTextField css*/
+.custom-text-field  {
+    -fx-text-fill: white;
+/*!important;*/
+}
