--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/add-or-view-message-modal.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/add-or-view-message-modal.fxml
@@ -9,9 +9,9 @@
 <?import org.controlsfx.control.SearchableComboBox?>
 <?import org.fxmisc.flowless.VirtualizedScrollPane?>
 <?import org.fxmisc.richtext.CodeArea?>
-<AnchorPane prefHeight="522.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.nhtuan10.mykafkatool.ui.controller.AddOrViewMessageModalController">
+<AnchorPane prefHeight="522.0" prefWidth="779.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.nhtuan10.mykafkatool.ui.controller.AddOrViewMessageModalController">
     <children>
-        <SplitPane fx:id="splitPane" dividerPositions="0.5" orientation="VERTICAL" prefHeight="558.0" prefWidth="818.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <SplitPane fx:id="splitPane" dividerPositions="0.5" orientation="VERTICAL" prefHeight="522.0" prefWidth="779.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
                 <TabPane prefHeight="509.0" prefWidth="816.0" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
@@ -151,7 +151,8 @@
                                                 </Label>
                                     <HBox fx:id="schemaSelectionHBox" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                        <children>
-                                                      <SearchableComboBox fx:id="schemaComboBox" maxHeight="25.0" prefHeight="25.0" prefWidth="550.0" />
+                                           <SearchableComboBox fx:id="schemaSubjectComboBox" maxHeight="26.0" prefHeight="26.0" prefWidth="488.0" />
+                                           <ComboBox fx:id="schemaVersionComboBox" maxHeight="26.0" prefHeight="26.0" prefWidth="72.0" />
                                           <Button fx:id="refreshSchemaBtn" mnemonicParsing="false" text="↻">
                                               <tooltip><Tooltip text="Refresh" /></tooltip>
                                           </Button>
@@ -210,7 +211,7 @@
                         </Tab>
                     </tabs>
                 </TabPane>
-                <AnchorPane fx:id="choiceButtonContainer" maxHeight="40.0" minHeight="40.0" minWidth="593.0" prefHeight="40.0" prefWidth="593.0">
+                <AnchorPane fx:id="choiceButtonContainer" maxHeight="40.0" minHeight="38.0" minWidth="593.0" prefHeight="40.0" prefWidth="789.0">
                     <HBox prefHeight="40.0" prefWidth="598.0" spacing="10.0">
                         <Button mnemonicParsing="false" onAction="#send" prefHeight="26.0" prefWidth="80.0" text="Send">
                             <HBox.margin>
